src/styles/scss/shared.scss
.hide-linkstyle {
  color: inherit;
  text-decoration: inherit;
}

/**
 * Hide element visually but not from screen readers.
 *
 * https://www.accessibility-developer-guide.com/examples/hiding-elements/visually/
 *
 * The class is intentionally called .hide-visually and not .visually-hidden.
 * Drupal which is a known consumer of the design system also has a
 * .visually-hidden class where the implementation is a bit different.
 * To avoid any conflicts we call our class something else.
 *
 * https://git.drupalcode.org/project/drupal/-/blob/9.2.x/core/modules/system/css/components/hidden.module.css#L18-33
 */
@mixin hide-visually {
  position: absolute;
  clip: rect(1px, 1px, 1px, 1px);
  padding: 0;
  border: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
}

.modal-btn-close {
  background-color: $c-global-primary;
  position: fixed;
  top: 0;
  right: 0;
  padding: 34px;
  transition: 0.3s;
  z-index: 2;

  &:hover {
    transform: rotateZ(90deg);
  }
}

.modal {
  // This color is inherited by the <Counter /> component.
  --parent-bg-color: #f6f5f0;

  background-color: $c-global-primary;
  position: relative;
  opacity: 0;
  display: none;
  transition: opacity 0.3s;
  min-height: 100vh;
  height: 100%;

  &__screen-reader-description {
    @include hide-visually;
  }
}

.modal-padding {
  padding: 20px;
}

.modal-show {
  display: flex;
  position: absolute;
  left: 0;
  right: 0;
  opacity: 1;
}

:root {
  --parent-bg-color: #fff;
}

.uppercase {
  text-transform: uppercase;
}

.modal-btn-fallback {
  display: flex;
  justify-content: flex-end;
  padding: 20px;
}

